# ballin

./: CMakeLists.txt  README.md
ballin/: CMakeLists.txt
ballin/include/ballin/: CMakeLists.txt
ballin/include/ballin/math/: CMakeLists.txt  Eval.hpp  Lexer.hpp
ballin/source/: CMakeLists.txt  main.cpp
ballin/source/math/: CMakeLists.txt  Eval.cpp  Lexer.cpp
cmake/: static_analyzers.cmake
cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
